vlib/v/parser/tests/interface_duplicate_method.out
vlib/v/parser/tests/interface_duplicate_method.vv:3:2: error: duplicate method `fun`
    1 | interface Abc {
    2 |     fun()
    3 |     fun()
      |     ~~~
    4 | }
